--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Kanit:wght@500&family=Lato:wght@300&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   background-color: rgb(26, 25, 25);
+  font-family: 'Fira Sans', sans-serif;
+}
+
+.custom-bg {
+  background-image: url('https://wallpapers.com/images/featured/laptop-murjp1nk4lp1idlt.jpg');
+  background-repeat: no-repeat;
+  background-size: inherit;
+  width: 100%;
+  height: auto;
 }
